<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <Spinner
        android:id="@+id/spn_contatcs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_phone"
        android:text="@string/app_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"/>
    <EditText
        android:id="@+id/edt_noidung1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" 
        android:lines="3"
        android:maxLines="3">
        <requestFocus />
    </EditText>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:gravity="center">         
         <Button
        android:id="@+id/btt_guiSMS"
        android:layout_width="120dip"
        android:layout_height="wrap_content"
        android:text="@string/sendSMS" />
            <Button
        android:id="@+id/btt_boqua"
        android:layout_width="120dip"
        android:layout_height="wrap_content"
        android:text="@string/boqua" />        
    </LinearLayout>
</LinearLayout>